src/test/ui/const-generics/const_evaluatable_checked/cross_crate_predicate.rs
// aux-build:const_evaluatable_lib.rs
#![feature(const_generics, const_evaluatable_checked)]
#![allow(incomplete_features)]
extern crate const_evaluatable_lib;

fn user<T>() {
    let _ = const_evaluatable_lib::test1::<T>();
    //~^ ERROR constant expression depends
    //~| ERROR constant expression depends
    //~| ERROR constant expression depends
    //~| ERROR constant expression depends
}

fn main() {}
